--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <section id="home">
                 <div id="splash-parent">
                     <div id="splash-text">
-                        <h1>Catalyst</h1>
+                        <div class="col">
+                            <img src="assets/catalyst_logo.png"/>
+                        </div>
                         <h3>Presented by HackGT</h3>
                     </div>
                 </div>
