--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <link href="style.css" rel="stylesheet"/>
         <meta name="viewport" content="initial-scale=1, minimum-scale=1">
-        <!-- ### Favicon here ### <link rel="icon" type="image/png" href="./favicon.png"/> -->
+        <link rel="icon" type="image/png" href="./assets/favicon.png"/>
         <meta property="og:title" content="Catalyst 4">
         <meta property="og:description" content="Catalyst is a free event held on Satuday March 28th from 9AM to 8PM, where metro Atlanta high school students will epxlore technology and learn from our sponsors and mentors at Georgia Tech.">
         <!-- <meta property="og:url" content="https://catalyst.hack.gt"> -->
@@ -22,12 +22,12 @@
             </label>
             <ul>
                 <a href="#home"><li><span>Home</span></li></a>
-                <a href="#important-info"><li><span>Important Info</span></li></a>
+                <!-- <a href="#important-info"><li><span>Important Info</span></li></a> -->
                 <a href="#about"><li><span>About</span></li></a>
                 <a href="#day"><li><span>During the Day</span></li></a>
                 <a href="#registration"><li><span>Registration</span></li></a>
                 <a href="#tracks"><li><span>Tracks</span></li></a>
-                <a href="#schedule"><li><span>Schedule</span></li></a>
+                <!-- <a href="#schedule"><li><span>Schedule</span></li></a> -->
                 <a href="#faq"><li><span>FAQ</span></li></a>
                 <a href="#sponsors"><li><span>Sponsors</span></li></a>
             </ul>
@@ -49,13 +49,13 @@
                     <div><span id="seconds">0</span></div> -->
 
 
-                    <div class="register"><a href="#important-info">Day-Of Info</a></div>
-                    <!-- REGISTRATION <div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div> -->
-                </div>
+                    <!--<div class="register"><a href="#important-info">Day-Of Info</a></div>-->
+                    <!-- REGISTRATION <div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div> 
+                </div> -->
             </section>
-            <section id="important-info">
+            <!-- IMPORTANT INFO --- TO DO LATER  <section id="important-info">
                 <div>
-                    <h1>Important Information/FAQ</h1>
+                    <h1>Important Information</h1>
                     <div class="container">
                         <div class="col">
                             <p>We are super excited to welcome amazing students from all over the Atlanta Metro Area to the Klaus Advanced Computing Building at Georgia Tech for a day of STEAM education and exploration!</p>
@@ -79,9 +79,9 @@
                             </ul>
                         </div>
 
-                        <!-- ASSET <div class="col">
+                         ASSET <div class="col">
                             <img src="assets/registration.svg"/>
-                        </div> -->
+                        </div> 
 
                     </div>
                     <div>
@@ -110,13 +110,13 @@
                         <p>I have this other question! Email us at <a href="mailto:hello@hack.gt" target="_blank">hello@hack.gt</a> and we'll get back to you as soon as we can!</p>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section id="about">
                 <div>
                     <h1>About</h1>
                     <div class="container">
                         <div class="col">
-                            <p>HackGT presents Catalyst, a FREE day of STEAM directed towards high school students in the Metro Atlanta Area. We are eager to welcome all of these students on <b><u>Saturday April 13th</u></b> from 10am to 8pm to Georgia Tech's Campus.</p>
+                            <p>HackGT presents Catalyst, a FREE day of STEAM directed towards high school students in the Metro Atlanta Area. We are eager to welcome all of these students on <b><u>Saturday March 28th</u></b> from 9am to 8pm to Georgia Tech's Campus.</p>
                         </div>
 
                         <!-- ASSET <div class="col">
@@ -128,7 +128,7 @@
                         <li>Learn about the world of STEAM and Computer Science as a career path.</li>
                         <li>Gain insight into impactful, widely known tech companies. </li>
                         <li>Receive mentorship from college students and industry professionals.</li>
-                        <li>Connect with summer camp opportunities at Georgia Tech and in the city to further their education and exposure.</li>
+                        <li>Connect with more opportunities at Georgia Tech & in the city to further their education and exposure.</li>
                     </ul>
                 </div>
             </section>
@@ -225,14 +225,14 @@
                     </div>
                 </div>
             </section>
-            <section id="schedule">
+            <!-- #SCHEDULE SECTION NOT RELEVANT YET <section id="schedule">
                 <div>
                     <h1>Schedule</h1>
                     <div>
                         <a href="https://info.hack.gt" target="_blank">
-                            <!-- ASSET <div>
+                             ASSET <div>
                                 <img src="assets/schedule.svg"/>
-                            </div> -->
+                            </div> 
                         </a>
 
                         <div>
@@ -240,7 +240,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section id="faq">
                 <div>
                     <h1>FAQ</h1>
@@ -255,7 +255,8 @@
                         <p>The event will be in the <a href="https://goo.gl/maps/vYgv5rqy1hz">Klaus Advanced Computing Building</a> at Georgia Tech.</p>
 
                         <p>What about parking?</p>
-                        <p>Check out the <a href="#important-info">important information</a> section for more information!</p>
+                        <p>More information like this will be released closer to the event.</p>
+                        <!--<p>Check out the <a href="#important-info">important information</a> section for more information!</p>-->
 
                         <p>Are parents allowed to come?</p>
                         <p>Although we are grateful for parental support, this is a student-only event from check-in on.</p>
