Track Icons added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="initial-scale=1, minimum-scale=1">
         <link rel="icon" type="image/png" href="./assets/favicon.png"/>
         <meta property="og:title" content="Catalyst 4">
-        <meta property="og:description" content="Catalyst is a free event held on Satuday March 28th from 9AM to 8PM, where metro Atlanta high school students will epxlore technology and learn from our sponsors and mentors at Georgia Tech.">
+        <meta property="og:description" content="Catalyst is a free event held on Satuday March 28th, where metro Atlanta high school students will epxlore technology and learn from our sponsors and mentors at Georgia Tech.">
         <!-- <meta property="og:url" content="https://catalyst.hack.gt"> -->
         <title>Catalyst</title>
     </head>
@@ -107,7 +107,7 @@
                             <li>We will validate parking when you check out.</li>
                         </ul>
 
-                        <p>I have this other question! Email us at <a href="mailto:hello@hack.gt" target="_blank">hello@hack.gt</a> and we'll get back to you as soon as we can!</p>
+                        <p>Have any other questions? Email us at hello@hack.gt - we'd love to help!</p>
                     </div>
                 </div>
             </section> -->
@@ -116,7 +116,7 @@
                     <h1>About</h1>
                     <div class="container">
                         <div class="col">
-                            <p>HackGT presents Catalyst, a FREE day of STEAM directed towards high school students in the Metro Atlanta Area. We are eager to welcome all of these students on <b><u>Saturday March 28th</u></b> from 9am to 8pm to Georgia Tech's Campus.</p>
+                            <p>HackGT presents Catalyst, a FREE day of STEAM directed towards high school students in the Metro Atlanta Area. We are eager to welcome all of these students on <b><u>Saturday March 28th</u></b> to Georgia Tech's Campus.</p>
                         </div>
 
                         <!-- ASSET <div class="col">
@@ -172,14 +172,14 @@
                         <div class="col">
                             <div class="container">
                                 <div class="col">
-                                    <p>Hardware</p>
+                                    <p>Robotics</p>
                                 </div>
 
-                                <!-- ASSET <div class="col track-description">
-                                    <div class="track-icon"><img src="assets/hardware.svg"/></div>
-                                </div> -->
+                                 <div class="col track-description">
+                                    <div class="track-icon"><img src="assets/Catalyst_RobotIcon.png"/></div>
+                                </div> 
                                 <div class="track-text">
-                                    <p>Build next-generation devices that will power future tech! In the hardware track, you'll learn how to design fundamental circuits through breadboarding and Arduino, create devices that you can interact with, and gain skills that will help you bring your ideas to life. Students will have the opportunity to build their own electronic hardware and then take home their creations to share with friends and family!</p>
+                                    <p>The robotics track blah blah blah</p>
                                 </div>
                             </div>
                             <div class="container">
@@ -187,11 +187,11 @@
                                     <p>Gaming</p>
                                 </div>
 
-                                <!-- ASSET <div class="col track-description">
-                                    <div class="track-icon"><img src="assets/gaming.svg"/></div>
-                                </div> -->
+                                <div class="col track-description">
+                                    <div class="track-icon"><img src="assets/Catalyst_GamingIcon.png"/></div>
+                                </div> 
                                 <div class="track-text">
-                                    <p>The gaming track focuses on teaching fundamental programming concepts through video game design and development. This track will introduce level design and block-based coding using Scratch and will transition into text-based coding in Roblox. Throughout the day, participants will complete short challenges and activities to reinforce concepts learned and will finish the day with a full game created from start to finish in Scratch.</p>
+                                    <p>ABOUT THE TRACK</p>
                                 </div>
                             </div>
                         </div>
@@ -199,26 +199,26 @@
                         <div class="col">
                             <div class="container">
                                 <div class="col">
-                                    <p>Software</p>
+                                    <p>Cyber</p>
                                 </div>
 
-                                <!-- ASSET <div class="col track-description">
-                                    <div class="track-icon"><img src="assets/software.svg"/></div>
-                                </div> -->
+                                <div class="col track-description">
+                                    <div class="track-icon"><img src="assets/Catalyst_HackingIcon.png"/></div>
+                                </div>
                                 <div class="track-text">
-                                    <p>Learn how to build the technology that runs the world! In the software track, you will learn how to code, use that to build your own website, and eventually create a Spotify song recommendation system! If you're interested in building the future of the internet, the software track is for you!</p>
+                                    <p>ABOUT THE TRACK</p>
                                 </div>
                             </div>
                             <div class="container">
                                 <div class="col">
-                                    <p>Design</p>
+                                    <p>MusicTech</p>
                                 </div>
 
-                                <!-- ASSET <div class="col track-description">
-                                    <div class="track-icon"><img src="assets/design.svg"/></div>
-                                </div> -->
+                                <div class="col track-description">
+                                    <div class="track-icon"><img src="assets/Catalyst_MusicIcon.png"/></div>
+                                </div>
                                 <div class="track-text">
-                                    <p>The design track focuses on the intersection of art and programming, bridging the gap between tech and design. Students will learn the fundamentals of computer science through hands-on art projects dealing with snapchat filters, animation, graphic design, and much more! At the end of the day, students get to bring home their newfound knowledge for computer science and a new work of art.</p>
+                                    <p>ABOUT THE TRACK</p>
                                 </div>
                             </div>
                         </div>
@@ -254,8 +254,8 @@
                         <p>Where is Catalyst?</p>
                         <p>The event will be in the <a href="https://goo.gl/maps/vYgv5rqy1hz">Klaus Advanced Computing Building</a> at Georgia Tech.</p>
 
-                        <p>What about parking?</p>
-                        <p>More information like this will be released closer to the event.</p>
+                        <!-- <p>What about parking?</p>
+                        <p>More information like this will be released closer to the event.</p> -->
                         <!--<p>Check out the <a href="#important-info">important information</a> section for more information!</p>-->
 
                         <p>Are parents allowed to come?</p>
@@ -272,6 +272,10 @@
             <section id="sponsors">
                 <div>
                     <h1>Sponsors</h1>
+                    <div>
+                        <p>Coming soon!</p>
+                        <p>Interested in sponsoring catalyst? Send us an email to <a href="hello@hack.gt">hello@hack.gt</a> - we're looking forward to working with you! </p>
+                    </div>
                     <!-- ASSETS <div class="sponsor-container">
                         <a href="https://amazon.com"><img src="assets/logo-amazon.svg"/></a>
                         <a href="https://facebook.com"><img src="assets/logo-fb.svg"/></a>
