--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h1>During the Day</h1>
                     <div class="container">
                         <div class="col">
-                            <p>Throughout the day, students will follow one of four tracks: Design, Hardware, Gaming, or Software</p>
+                            <p>Throughout the day, students will follow one of four tracks: Hardware, Gaming, InfoSec, MusicTech</p>
 
                             <p>Each track will have workshops and will allow students to build a piece of technology they can take home. In addition to the track workshops, there will be opportunities for students to engage with industry professionals and college students.</p>
 
@@ -172,7 +172,7 @@
                         <div class="col">
                             <div class="container">
                                 <div class="col">
-                                    <p>Robotics</p>
+                                    <p>Hardware</p>
                                 </div>
 
                                  <div class="col track-description">
@@ -199,7 +199,7 @@
                         <div class="col">
                             <div class="container">
                                 <div class="col">
-                                    <p>Cyber</p>
+                                    <p>InfoSec</p>
                                 </div>
 
                                 <div class="col track-description">
@@ -274,7 +274,7 @@
                     <h1>Sponsors</h1>
                     <div>
                         <p>Coming soon!</p>
-                        <p>Interested in sponsoring catalyst? Send us an email to <a href="hello@hack.gt">hello@hack.gt</a> - we're looking forward to working with you! </p>
+                        <p>Interested in sponsoring catalyst? Send us an email to <a href="sposorship@hack.gt">sponsorship@hack.gt</a> - we're looking forward to working with you! </p>
                     </div>
                     <!-- ASSETS <div class="sponsor-container">
                         <a href="https://amazon.com"><img src="assets/logo-amazon.svg"/></a>
