Fixed mobile view and nav bar coloring

--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
           <div>
             <h1>Registration</h1>
             <div class="container">
-              <!--  REGISTRATION <div class="col">
+               <div class="col">
                             <p>You can register <a href="https://registration.catalyst.hack.gt/">here!</a></p>
-                            <p>Registration closes on April 5th, so sign up now!</p>
-                        </div> -->
+                            <p>Registration closes on March 13th, so sign up now!</p>
+                        </div>
 
               <!-- ASSET <div class="col">
                             <img src="assets/registration.svg"/>
