Add track descriptions

--- a/index.html
+++ b/index.html
@@ -197,10 +197,13 @@
           <div>
             <h1>Registration</h1>
             <div class="container">
-               <div class="col">
-                            <p>You can register <a href="https://registration.catalyst.hack.gt/">here!</a></p>
-                            <p>Registration closes on March 13th, so sign up now!</p>
-                        </div>
+              <div class="col">
+                <p>
+                  You can register
+                  <a href="https://registration.catalyst.hack.gt/">here!</a>
+                </p>
+                <p>Registration closes on March 13th, so sign up now!</p>
+              </div>
 
               <!-- ASSET <div class="col">
                             <img src="assets/registration.svg"/>
@@ -213,7 +216,7 @@
             <h1>Tracks</h1>
             <div class="container">
               <div class="col">
-                <div class="container">
+                <div id="track-container" class="container">
                   <div class="col">
                     <p>Hardware</p>
                   </div>
@@ -224,10 +227,19 @@
                     </div>
                   </div>
                   <div class="track-text">
-                    <p>The robotics track blah blah blah</p>
+                    <p>
+                      The hardware track will teach students the fundamentals of
+                      circuits through the interactions of the Arduino and the
+                      breadboard. Throughout the day, you will have lessons
+                      about the basics of electronics, slowly building on top of
+                      each other, and finishing the day by constructing your own
+                      robot. You will create and control your own devices and
+                      gain skills just enough to make you slightly dangerous. If
+                      you have a spark in interest, come join hardware!
+                    </p>
                   </div>
                 </div>
-                <div class="container">
+                <div id="track-container" class="container">
                   <div class="col">
                     <p>Gaming</p>
                   </div>
@@ -238,13 +250,24 @@
                     </div>
                   </div>
                   <div class="track-text">
-                    <p>ABOUT THE TRACK</p>
+                    <p>
+                      From Minecraft and Mario, to Roblox and Rocket League,
+                      video games are a popular and interactive way to code and
+                      launch experiences! The Gaming track focuses on teaching
+                      fundamental computing concepts by introducing game design
+                      with levels, animations, and characters using block-based
+                      coding. In this programming adventure, participants will
+                      level up by completing short challenges and activities to
+                      reinforce concepts learned and will finish the day with a
+                      fully created game in Scratch. Calling all future game
+                      designers and developers to create the next Fortnite!
+                    </p>
                   </div>
                 </div>
               </div>
 
               <div class="col">
-                <div class="container">
+                <div id="track-container" class="container">
                   <div class="col">
                     <p>InfoSec</p>
                   </div>
@@ -255,10 +278,17 @@
                     </div>
                   </div>
                   <div class="track-text">
-                    <p>ABOUT THE TRACK</p>
+                    <p>
+                      As you browse through Instagram, you're not the only one
+                      scrolling through your feed. Data is being collected every
+                      second, and you are no exception. Join us to learn more
+                      about protecting yourself and your devices through
+                      vulnerability protection, encryption, and cyber
+                      awareness!!
+                    </p>
                   </div>
                 </div>
-                <div class="container">
+                <div id="track-container" class="container">
                   <div class="col">
                     <p>MusicTech</p>
                   </div>
@@ -269,7 +299,18 @@
                     </div>
                   </div>
                   <div class="track-text">
-                    <p>ABOUT THE TRACK</p>
+                    <p>
+                      Are you interested in producing beats for the next biggest
+                      Soundcloud rapper? If so, this track is perfect for you!
+                      The music technology track focuses on the intersection
+                      between music and programming! This track will teach you
+                      how to code in either Python or Javascript to compose
+                      individual beats and ultimately, a song, through a program
+                      called EarSketch. Musicians aren't the only ones that can
+                      make catchy tunes. After going through this track, you,
+                      too, will be equipped with computer science skills to
+                      produce sick beats!
+                    </p>
                   </div>
                 </div>
               </div>
