Layered background (no scroll effect), and nice mouseover effect on navbar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link href="style.css" rel="stylesheet" />
     <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
-    <meta property="og:title" content="Catalyst 4" />
+    <meta property="og:title" content="Catalyst 5" />
     <meta
       property="og:description"
       content="Catalyst is a free event held on Satuday March 28th, where metro Atlanta high school students will epxlore technology and learn from our sponsors and mentors at Georgia Tech."
@@ -24,27 +24,27 @@
           </div>
         </label>
         <ul>
-          <a href="#home"
+          <a href="#home" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"
             ><li><span>Home</span></li></a
           >
-          <!-- <a href="#important-info"><li><span>Important Info</span></li></a> -->
-          <a href="#about"
+          <!-- <a href="#important-info" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"><li><span>Important Info</span></li></a> -->
+          <a href="#about" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"
             ><li><span>About</span></li></a
           >
-          <a href="#day"
+          <a href="#day" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"
             ><li><span>During the Day</span></li></a
           >
-          <a href="#registration"
+          <a href="#registration" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"
             ><li><span>Registration</span></li></a
           >
-          <a href="#tracks"
+          <a href="#tracks" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"
             ><li><span>Tracks</span></li></a
           >
-          <!-- <a href="#schedule"><li><span>Schedule</span></li></a> -->
-          <a href="#faq"
+          <!-- <a href="#schedule" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"><li><span>Schedule</span></li></a> -->
+          <a href="#faq" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"
             ><li><span>FAQ</span></li></a
           >
-          <a href="#sponsors"
+          <a href="#sponsors" onmouseover="gradientTime(this)" onmouseout="removeColor(this)"
             ><li><span>Sponsors</span></li></a
           >
         </ul>
@@ -54,7 +54,7 @@
           <div id="splash-parent">
             <div id="splash-text">
               <div class="col">
-                <img src="assets/catalyst_logo.png" />
+                <img src="assets/logo.png" />
               </div>
               <h3>Presented by HackGT</h3>
             </div>
