Add register button and fix scaling issues

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           </div>
 
           <!--<div class="register"><a href="#important-info">Day-Of Info</a></div>-->
-          <!-- REGISTRATION <div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div> 
-                </div> -->
+          <div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div> 
+                <!-- </div> -->
         </section>
         <!-- IMPORTANT INFO --- TO DO LATER  <section id="important-info">
                 <div>
